# communication_connected_nfc_tag

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  connected_nfc_tag.gni
connected_tag/interfaces/js/napi/: BUILD.gn
connected_tag/services/src/hardware/: BUILD.gn
frameworks/js/napi/: BUILD.gn  nfc_napi_adapter.cpp  nfc_napi_adapter.h  nfc_napi_entry.cpp  nfc_napi_event.cpp  nfc_napi_event.h  nfc_napi_utils.cpp  nfc_napi_utils.h
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/include/: define.h  infc_tag.h  infc_tag_callback.h  infc_tag_service.h  infc_tag_session.h  nfc_tag_callback_stub.h  nfc_tag_client.h  nfc_tag_errcode.h  nfc_tag_impl.h  nfc_tag_log.h  nfc_tag_proxy.h  nfc_tag_session_proxy.h
interfaces/inner_api/src/: nfc_tag_callback_stub.cpp  nfc_tag_client.cpp  nfc_tag_impl.cpp  nfc_tag_proxy.cpp  nfc_tag_session_proxy.cpp
interfaces/innerkits/connected_tag/: BUILD.gn
interfaces/innerkits/nfc_core/include/: nfc_sdk_common.h
interfaces/innerkits/nfc_core/include/controller/: nfc_controller.h  nfc_controller_proxy.h
interfaces/innerkits/nfc_core/src/controller/: nfc_controller.cpp  nfc_controller_proxy.cpp
interfaces/js/napi/connected_tag/: nfc_napi_adapter.h  nfc_napi_event.h
interfaces/kits/native_cpp/connected_tag_base/src/: tag_session_proxy.cpp
interfaces/kits/native_cpp/napi/connected_tag/: nfc_napi_event.cpp
nfc_core/: bundle.json
nfc_core/interfaces/innerkits/: BUILD.gn
nfc_core/interfaces/innerkits/include/: nfc_sdk_common.h
nfc_core/interfaces/innerkits/include/controller/: infc_controller_service.h  nfc_controller.h  nfc_controller_proxy.h
nfc_core/interfaces/innerkits/include/tags/: mifare_classic_tag.h  taginfo.h
nfc_core/interfaces/innerkits/src/: nfc_basic_proxy.cpp  nfc_sdk_common.cpp
nfc_core/interfaces/innerkits/src/controller/: nfc_controller.cpp  nfc_controller_proxy.cpp
nfc_core/interfaces/innerkits/src/tags/: iso15693_tag.cpp  isodep_tag.cpp  mifare_classic_tag.cpp  mifare_ultralight_tag.cpp  ndef_message.cpp  ndef_tag.cpp  nfca_tag.cpp  nfcb_tag.cpp  nfcf_tag.cpp
nfc_core/interfaces/js/napi/: BUILD.gn  nfc_napi_controller.cpp  nfc_napi_controller_adapter.cpp
nfc_core/interfaces/js/napi/controller/: BUILD.gn  nfc_napi_controller.cpp
nfc_core/interfaces/js/napi/tag/: BUILD.gn  nfc_napi_tag.cpp  nfc_napi_tag.h  nfc_napi_tag_context.cpp  nfc_napi_tag_isodep.cpp  nfc_napi_tag_isodep.h  nfc_napi_tag_mifare_classic.cpp  nfc_napi_tag_mifare_classic.h  nfc_napi_tag_mifare_ul.h  nfc_napi_tag_sesstion.cpp  nfc_napi_tag_sesstion.h  nfc_napi_taga.cpp  nfc_napi_taga.h  nfc_napi_tagb.cpp  nfc_napi_tagb.h  nfc_napi_tagv.cpp  nfc_napi_tagv.h  nfc_napi_utils.cpp  nfc_napi_utils.h
nfc_core/services/: BUILD.gn
nfc_core/services/include/: infc_service.h  nfc_service.h
nfc_core/services/src/: common_event_handler.cpp  nfc_sa_manager.cpp  nfc_service.cpp
nfc_core/services/src/controller/: nfc_controller_impl.cpp  nfc_controller_impl.h  nfc_controller_stub.cpp  nfc_controller_stub.h
nfc_core/services/src/nci_adapter/: tag_host.cpp  tag_host.h  tag_nci_adapter.cpp
nfc_core/services/src/tags/: tag_session_stub.cpp
sa_profile/: 1140.xml  1148.json  BUILD.gn
services/: BUILD.gn  libnfc_tag_service_version_script.txt
services/connected_tag/: BUILD.gn
services/connected_tag/include/: permission_tools.h
services/connected_tag/src/: permission_tools.cpp
services/connected_tag/src/hardware/include/: connected_tag_hdi_adapter.h
services/etc/init/: BUILD.gn  nfc_tag_service.cfg  nfc_tag_service.rc
services/include/: nfc_tag_callback_proxy.h  nfc_tag_service.h  nfc_tag_service_impl.h  nfc_tag_session_stub.h  nfc_tag_stub.h  nfc_tag_sys_perm.h  nfc_tag_utils.h  permission_tools.h
services/src/: nfc_tag_callback_proxy.cpp  nfc_tag_service.cpp  nfc_tag_service_impl.cpp  nfc_tag_session_stub.cpp  nfc_tag_stub.cpp  nfc_tag_sys_perm.cpp  nfc_tag_utils.cpp  permission_tools.cpp
services/src/hdi/: BUILD.gn
services/src/hdi/include/: nfc_tag_hdi_adapter.h  nfc_tag_hdi_impl.h
services/src/hdi/src/: nfc_tag_hdi_adapter.cpp  nfc_tag_hdi_impl.cpp
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/framework_fuzzer/: BUILD.gn  nfc_tag_proxy_fuzzer.cpp  nfc_tag_proxy_fuzzer.h
test/fuzztest/service_fuzzer/: BUILD.gn  nfc_tag_service_fuzzer.cpp  nfc_tag_service_fuzzer.h  project.xml
test/fuzztest/service_fuzzer/corpus/: init
test/unittest/: BUILD.gn
test/unittest/common_mock/: BUILD.gn  accesstoken_kit.h  common_mock.cpp  common_mock.h  hdi_base.h  ipc_object_stub.h  ipc_skeleton.h  iremote_broker.h  iremote_object.h  iremote_proxy.h  iremote_stub.h  iservstat_listener_hdi.h  message_option.h  message_parcel.h  system_ability.h  system_ability_listener.h  tokenid_kit.h
test/unittest/framework_test/: BUILD.gn
test/unittest/framework_test/nfc_tag_callback_stub_test/: BUILD.gn  nfc_tag_callback_stub_test.cpp
test/unittest/framework_test/nfc_tag_proxy_test/: BUILD.gn  nfc_tag_proxy_test.cpp
test/unittest/service_test/: BUILD.gn
test/unittest/service_test/nfc_tag_callback_proxy_test/: BUILD.gn  nfc_tag_callback_proxy_test.cpp
test/unittest/service_test/nfc_tag_hdi_adapter_test/: BUILD.gn  nfc_tag_hdi_adapter_test.cpp  nfc_tag_hdi_impl_mock.cpp
test/unittest/service_test/nfc_tag_hdi_adapter_test/v1_1/: iconnected_nfc_tag.h  iconnected_nfc_tag_callback.h
test/unittest/service_test/nfc_tag_service_test/: BUILD.gn  nfc_tag_service_test.cpp
test/unittest/service_test/nfc_tag_stub_test/: BUILD.gn  nfc_tag_stub_test.cpp
test/unittest/service_test/nfc_tag_sys_perm_test/: BUILD.gn  nfc_tag_sys_perm_test.cpp
test/unittest/service_test/nfc_tag_utils_test/: BUILD.gn  nfc_tag_utils_test.cpp
test/unittest/source_mock/: nfc_tag_callback_stub_mock.cpp
test/utils/: BUILD.gn  nfc_tag_access_token_mock.cpp  nfc_tag_access_token_mock.h
utils/sa_listener/: BUILD.gn  system_ability_listener.cpp  system_ability_listener.h
