# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

NFC_TAG_DIR = "//foundation/communication/connected_nfc_tag"

declare_args() {
  connected_nfc_tag_only_system_app_access_api = false
  if (defined(global_parts_info.connected_nfc_tag_only_system_app_access_api)) {
    connected_nfc_tag_only_system_app_access_api = true
  }
}

common_cflags = [
  "-fstack-protector-strong",
  "-D_FORTIFY_SOURCE=2",
  "-fdata-sections",
  "-ffunction-sections",
  "-Os",
  "-O2",
]

global_defines = ["NFC_TAG_HILOG"]

global_sanitize = {
  boundary_sanitize = true
  cfi = true
  cfi_cross_dso = true
  integer_overflow = true
  ubsan = true
  debug = false
}

unittest_defines = [
  "NFC_TAG_HILOG",
  "private = public",
  "protected = public",
]
