# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

config("nfc_tag_config") {
  cflags_cc = [
    "-fPIC",
    "-Wno-unused-parameter",
    "-Wunused-private-field",
  ]
  include_dirs = [
    "//foundation/communication/connected_nfc_tag/interfaces/inner_api/include",
  ]
}

config("nfc_tag_public_config") {
  include_dirs = []
}

ohos_shared_library("nfc_tag_inner_kits") {
  configs = [ ":nfc_tag_config" ]
  public_configs = [ ":nfc_tag_public_config" ]
  sources = [
    "src/nfc_tag_callback_stub.cpp",
    "src/nfc_tag_impl.cpp",
    "src/nfc_tag_session_proxy.cpp",
  ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "communication"
  part_name = "connected_nfc_tag"
}
