# Copyright (C) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/communication/connected_nfc_tag/connected_nfc_tag.gni")

config("nfc_tag_config") {
  include_dirs = [
    "$NFC_TAG_DIR/interfaces/inner_api/include",
  ]
}

config("nfc_tag_public_config") {
  include_dirs = ["include"]
}

ohos_shared_library("nfc_tag_inner_kits") {
  cflags_cc = [
    "-fPIC",
    "-fdata-sections",
    "-fno-exceptions",
    "-ffunction-sections",
    "-Oz",
    "-flto",
    "-Wno-unused-parameter",
    "-Wunused-private-field",
  ]
  defines = [ "NFC_TAG_HILOG" ]
  sanitize = {
    cfi = true
    boundary_sanitize = true
    integer_overflow = true
    cfi_cross_dso = true
    debug = false
    ubsan = true
    cfi_vcall_icall_only = true
  }
  branch_protector_ret = "pac_ret"
  configs = [ ":nfc_tag_config" ]
  public_configs = [ ":nfc_tag_public_config" ]
  sources = [
    "src/nfc_tag_callback_stub.cpp",
    "src/nfc_tag_client.cpp",
    "src/nfc_tag_proxy.cpp",
  ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "drivers_interface_connected_nfc_tag:libconnected_nfc_tag_proxy_1.1",
  ]

  subsystem_name = "communication"
  part_name = "connected_nfc_tag"
}
