# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/communication/connected_nfc_tag/connected_nfc_tag.gni")

# Only used for test
ohos_static_library("test_utils_static") {
  defines = unittest_defines
  cflags_cc = [ "--coverage" ]
  cflags = [ "--coverage" ]
  ldflags = [ "--coverage" ]
  sources = [
    "nfc_tag_access_token_mock.cpp",
  ]
  include_dirs = [
    "$NFC_TAG_DIR/interfaces/inner_api/include",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "connected_nfc_tag"
  subsystem_name = "communication"
}