# Copyright (C) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/communication/connected_nfc_tag/connected_nfc_tag.gni")

ohos_shared_library("connectedtag") {
  install_enable = true
  include_dirs = [
    "$NFC_TAG_DIR/interfaces/inner_api/include",
  ]
  defines = [ "NFC_TAG_HILOG" ]
  branch_protector_ret = "pac_ret"

  sources = [
    "nfc_napi_adapter.cpp",
    "nfc_napi_entry.cpp",
    "nfc_napi_event.cpp",
    "nfc_napi_utils.cpp",
  ]
  deps = [ "$NFC_TAG_DIR/interfaces/inner_api:nfc_tag_inner_kits" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"
  part_name = "connected_nfc_tag"
  subsystem_name = "communication"
}
