# Copyright (C) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//foundation/communication/connected_nfc_tag/connected_nfc_tag.gni")

ohos_static_library("nfc_tag_hdi_adapter") {
  cflags = common_cflags
  cflags_cc = common_cflags
  sanitize = global_sanitize
  defines = global_defines
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "$NFC_TAG_DIR/interfaces/inner_api/include",
    "$NFC_TAG_DIR/utils/sa_listener",
    "//third_party/bounds_checking_function/include",
  ]

  sources = [
    "src/nfc_tag_hdi_adapter.cpp",
    "src/nfc_tag_hdi_impl.cpp",
  ]

  deps = [
    "$NFC_TAG_DIR/utils/sa_listener:nfc_tag_sa_listener",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_connected_nfc_tag:libconnected_nfc_tag_proxy_1.1",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "communication"
  part_name = "connected_nfc_tag"
}

ohos_static_library("nfc_tag_hdi_adapter_test") {
  defines = global_defines
  cflags_cc = [ "--coverage" ]
  cflags = [ "--coverage" ]
  ldflags = [ "--coverage" ]
  include_dirs = [
    "include",
    "$NFC_TAG_DIR/interfaces/inner_api/include",
    "$NFC_TAG_DIR/utils/sa_listener",
    "//third_party/bounds_checking_function/include",
  ]

  sources = [
    "src/nfc_tag_hdi_adapter.cpp",
    "src/nfc_tag_hdi_impl.cpp",
  ]

  deps = [
    "$NFC_TAG_DIR/utils/sa_listener:nfc_tag_sa_listener",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_connected_nfc_tag:libconnected_nfc_tag_proxy_1.1",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "communication"
  part_name = "connected_nfc_tag"
}
