# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/communication/connected_nfc_tag/connected_nfc_tag.gni")

ohos_unittest("nfc_tag_sys_perm_unittest") {
  module_out_path = "connected_nfc_tag/nfc_tag_service/"
  defines = unittest_defines
  cflags_cc = [ "--coverage" ]
  cflags = [ "--coverage" ]
  ldflags = [ "--coverage" ]
  sources = [
    "nfc_tag_sys_perm_test.cpp",
    "$NFC_TAG_DIR/services/src/nfc_tag_sys_perm.cpp",
  ]

  include_dirs = [
    "$NFC_TAG_DIR/services/include",
    "$NFC_TAG_DIR/interfaces/inner_api/include",
    "./../../common_mock/",
    "./",
  ]

  deps = [
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "$NFC_TAG_DIR/test/unittest/common_mock:nfc_tag_common_mock",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}